# Literature_Gather

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  PRD.md  README.md  download_failed_report.html  downloader.py  main.py  nature12373.json  pyproject.toml  reproduce_issue.py
pdf_downloader/: README.md  main.py  pyproject.toml  result.json
pdf_downloader/src/pdf_downloader/: __init__.py  __main__.py  api.py  cli.py
reference_counter/: README.md  pyproject.toml  result.json
reference_counter/src/ref_counter/: __init__.py  cli.py  models.py  output.py  pipeline.py
reference_counter/src/ref_counter/extract/: __init__.py  paper_identity.py  pdf_reader.py  section_split.py
reference_counter/src/ref_counter/parse/: __init__.py  author_year.py  numbered.py  reflist.py  style_detect.py
reference_counter/src/ref_counter/resolve/: __init__.py  cache.py  matcher.py  openalex.py
src/citation_snowball/: __main__.py  config.py
src/citation_snowball/cli/: app.py
src/citation_snowball/core/: models.py
src/citation_snowball/db/: database.py  repository.py  schema.sql
src/citation_snowball/export/: __init__.py  html_report.py
src/citation_snowball/services/: __init__.py  crossref.py  downloader.py  openalex.py  pdf_parser.py  semantic_scholar.py  unpaywall.py
src/citation_snowball/snowball/: __init__.py  engine.py  filtering.py  saturation.py  scoring.py
src/citation_snowball/tui/: app.py  screens.py  tui.css
tests/: test_saturation.py  test_scoring.py  test_semantic_scholar_client.py
