[project]
name = "citation-snowball"
version = "0.1.0"
description = "Academic reference discovery tool using bidirectional citation analysis"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["citation", "snowball", "academic", "research", "openalex"]

dependencies = [
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pypdf>=4.0",
    "pdfplumber>=0.11",
    "jinja2>=3.0",
    "typer>=0.12",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
snowball = "citation_snowball.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/citation_snowball"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
