[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_downloader"
version = "0.1.0"
description = "Download PDFs from OpenAlex by ID or DOI list"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "tqdm>=4.66.0",
]

[project.scripts]
pdf_downloader = "pdf_downloader.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
